--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
    <!-- Ganti Audio di sini -->
-   <audio src="https://riskimiss22.github.io/sofia.mp3" id="linkmp3" class="sembunyi"></audio>
+   <audio src="sofia.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <div id="bodyblur">
      <!-- Wallpaper --><img src="https://i.pinimg.com/564x/d9/62/32/d96232ee2f229e71b7c83231c12c4884.jpg" id="wallpaper"/><div id="beneranblur"></div>
